# ai-gateway-portal

./: .env.example  .env_  .gitignore  DESKTOP_SETUP.md  Dockerfile  README.md  docker-compose.yml  next.config.mjs  openapi.json  package-lock.json  package.json  tailwind.config.js  test-settings.js  test-settings.mjs  user-acceptance-test-report.md
public/: tauri-direct.html  test-standalone.html
scripts/: test-connection.js
src/: middleware.ts  middleware.ts.bak  middleware.ts.disabled
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: menu-app.js  menu-injector.js
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs  menu.js
src/app/: globals.css  layout.tsx  metadata.tsx  page.tsx  test-settings.tsx
src/app-api-backup/api/debug/: route.ts
src/app/api/health/: route.ts
src/app/api/test/: route.ts
src/app/config/: page.tsx
src/app/debug/: page.tsx
src/app/debug-inputs/: page.tsx
src/app/keys/: page.tsx
src/app/keys/components/: KeyForm.tsx  KeyList.tsx
src/app/models/: page.tsx
src/app/settings/: page.tsx
src/app/settings-alt/: page.tsx
src/app/settings-uncontrolled/: page.tsx
src/app/teams/: page.tsx
src/app/test/: page.tsx
src/app/test-form/: page.tsx
src/app/test-plain/: page.tsx
src/app/users/: page.tsx
src/components/: ConfigDialog.tsx  ConfigDialogClient.tsx  TauriMenu.tsx
src/lib/: api-provider.tsx  config-context.tsx  config.ts  logger.ts  mock-data.ts  server-config.ts  tauri-api.ts  validators.ts
src/types/: keys.ts  models.ts  tauri.d.ts  teams.ts  users.ts
(+38 files in other folders)
